np_ffi_image_editor/lib/src/np_ffi_image_editor_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/np_ffi_image_editor.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class NpFfiImageEditorBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NpFfiImageEditorBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NpFfiImageEditorBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void rgba8ImageFree(
    ffi.Pointer<Rgba8Image> that,
  ) {
    return _rgba8ImageFree(
      that,
    );
  }

  late final _rgba8ImageFreePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<Rgba8Image>)>>(
          'rgba8ImageFree');
  late final _rgba8ImageFree =
      _rgba8ImageFreePtr.asFunction<void Function(ffi.Pointer<Rgba8Image>)>();

  ffi.Pointer<Rgba8Image> apply(
    ffi.Pointer<Rgba8Image> input,
    ffi.Pointer<ffi.Char> edits,
  ) {
    return _apply(
      input,
      edits,
    );
  }

  late final _applyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Rgba8Image> Function(
              ffi.Pointer<Rgba8Image>, ffi.Pointer<ffi.Char>)>>('apply');
  late final _apply = _applyPtr.asFunction<
      ffi.Pointer<Rgba8Image> Function(
          ffi.Pointer<Rgba8Image>, ffi.Pointer<ffi.Char>)>();
}

final class Rgba8Image extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> pixel;

  @ffi.UnsignedInt()
  external int width;

  @ffi.UnsignedInt()
  external int height;
}
